craete blank placeholder 'about' page

--- a/views/home/_top_bar.haml
+++ b/views/home/_top_bar.haml
@@ -29,7 +29,7 @@
                     %a{:href => '/competition/#{comp._id}'}
                       #{comp.name}
         %li
-          %a{:href => '/about'}
+          %a{:href => url('/about')}
             About
         %li
           %a{:href => '/contact'}
