--- a/views/home/_top_bar.haml
+++ b/views/home/_top_bar.haml
@@ -32,7 +32,7 @@
           %a{:href => url('/about')}
             About
         %li
-          %a{:href => '/contact'}
+          %a{:href => url('/contact')}
             Contact
       %ul.nav.secondary-nav
         - if false #logged in
