authenticate users through Github with omniauth
Create a user on the omniauth callback and log them in via the
session[:user_uid].

--- a/views/home/_top_bar.haml
+++ b/views/home/_top_bar.haml
@@ -50,6 +50,6 @@
                   Log out
         - else
           %li
-            %a{:href => '/auth/github'}
+            %a{:href => url('/auth/github')}
               Log In
 
