create some login helpers
app.rb is already getting crowded, so I want to move these out to another
module soon. They'll also need tests once I figure out what testing
framework to use...

--- a/views/home/_top_bar.haml
+++ b/views/home/_top_bar.haml
@@ -35,11 +35,10 @@
           %a{:href => url('/contact')}
             Contact
       %ul.nav.secondary-nav
-        - if false #logged in
+        - if logged_in?
           %li.dropdown{'data-dropdown' => 'dropdown'}
             %a.dropdown-toggle{:href => '#'}
-              -#
-                #{everyauth.github.user.login}
+              #{current_user.username}
             %ul.dropdown-menu
               %li
                 %a{:href => '/profile'}
