--- a/views/home_layout.haml
+++ b/views/home_layout.haml
@@ -25,6 +25,14 @@
       body {
         padding-top: 60px
       }
+
+      /* competitions */
+      input.comp-name {
+        height: 60px;
+        font-size: 60px;
+        line-height: 68px;
+      }
+
   %body
     = haml :'home/_top_bar'
     .container-fluid
