admins can now edit competitions

--- a/views/competitions/show.haml
+++ b/views/competitions/show.haml
@@ -4,3 +4,7 @@
     #{@competition.formatted_start}
     to
     #{@competition.formatted_end}
+  - if authorized?
+    %p
+      %a.btn.primary.large{:href => url("/competitions/#{@competition._id}/edit")}
+        Edit
