--- a/views/competitions/new.haml
+++ b/views/competitions/new.haml
@@ -21,5 +21,74 @@
           %input.mini{:type  => 'text',
                       :name  => 'end_time',
                       :value => '6:00pm'}
+
+          %select{:name => "timezone"}
+            - TimezoneFilter.small_list.each do |timezone|
+              %option{:value => timezone.strftime("%Z")}
+                #{timezone.strftime("[ %Z ]")} #{timezone.friendly_identifier}
+          -#
+            %select{:name => "timezone"}
+              %option{:value => "-1200"}
+                (GMT -12:00) Eniwetok, Kwajalein
+              %option{:value => "-1100"}
+                (GMT -11:00) Midway Island, Samoa
+              %option{:value => "-1000"}
+                (GMT -10:00) Hawaii
+              %option{:value => "-0900"}
+                (GMT -9:00) Alaska
+              %option{:value => "-0800"}
+                (GMT -8:00) Pacific Time (US &amp; Canada)
+              %option{:value => "-0700"}
+                (GMT -7:00) Mountain Time (US &amp; Canada)
+              %option{:value => "-0600"}
+                (GMT -6:00) Central Time (US &amp; Canada), Mexico City
+              %option{:value => "-0500"}
+                (GMT -5:00) Eastern Time (US &amp; Canada), Bogota, Lima
+              %option{:value => "-0400"}
+                (GMT -4:00) Atlantic Time (Canada), Caracas, La Paz
+              %option{:value => "-0330"}
+                (GMT -3:30) Newfoundland
+              %option{:value => "-0300"}
+                (GMT -3:00) Brazil, Buenos Aires, Georgetown
+              %option{:value => "-0200"}
+                (GMT -2:00) Mid-Atlantic
+              %option{:value => "-0100"}
+                (GMT -1:00 hour) Azores, Cape Verde Islands
+              %option{:value => "+0000"}
+                (GMT) Western Europe Time, London, Lisbon, Casablanca
+              %option{:value => "+0100"}
+                (GMT +1:00 hour) Brussels, Copenhagen, Madrid, Paris
+              %option{:value => "+0200"}
+                (GMT +2:00) Kaliningrad, South Africa
+              %option{:value => "+0300"}
+                (GMT +3:00) Baghdad, Riyadh, Moscow, St. Petersburg
+              %option{:value => "+0330"}
+                (GMT +3:30) Tehran
+              %option{:value => "+0400"}
+                (GMT +4:00) Abu Dhabi, Muscat, Baku, Tbilisi
+              %option{:value => "+0430"}
+                (GMT +4:30) Kabul
+              %option{:value => "+0500"}
+                (GMT +5:00) Ekaterinburg, Islamabad, Karachi, Tashkent
+              %option{:value => "+0530"}
+                (GMT +5:30) Bombay, Calcutta, Madras, New Delhi
+              %option{:value => "+0545"}
+                (GMT +5:45) Kathmandu
+              %option{:value => "+0600"}
+                (GMT +6:00) Almaty, Dhaka, Colombo
+              %option{:value => "+0700"}
+                (GMT +7:00) Bangkok, Hanoi, Jakarta
+              %option{:value => "+0800"}
+                (GMT +8:00) Beijing, Perth, Singapore, Hong Kong
+              %option{:value => "+0900"}
+                (GMT +9:00) Tokyo, Seoul, Osaka, Sapporo, Yakutsk
+              %option{:value => "+0930"}
+                (GMT +9:30) Adelaide, Darwin
+              %option{:value => "+1000"}
+                (GMT +10:00) Eastern Australia, Guam, Vladivostok
+              %option{:value => "+1100"}
+                (GMT +11:00) Magadan, Solomon Islands, New Caledonia
+              %option{:value => "+1200"}
+                (GMT +12:00) Auckland, Wellington, Fiji, Kamchatka
     %div.action
       %input.btn.primary{:type => 'submit', :value => 'Create Competition'}
