--- a/views/competitions/new.haml
+++ b/views/competitions/new.haml
@@ -24,7 +24,7 @@
 
           %select{:name => "timezone"}
             - @zones.each do |timezone|
-              %option{:value => timezone.abbr}
+              %option{:value => timezone.identifier}
                 = timezone.to_option
 
     %div.action
